* [nt]roff: The ".return" request returns immediately from a macro.
* [nt]roff: The "\:" escape inserts an optional line break but generates
  no hyphen if the line is split.
* [nt]roff: The "\~" escape is similar to "\ " but inserts a space that
  stretches like a regular " " when the line is adjusted.
* [nt]roff: The "\E" escape is similar to "\e" but is not interpreted in
  copy mode.
* troff/dpost: The "\X'Sync'" escape forces dpost to write position and
  font information to the generated PostScript. This is sometimes useful
  to ensure that following "\X'PS: ...'" escapes work as expected.
* troff: The "-a" option now generates locale-dependent output, with best
  results in UTF-8 locales.
* The "-mpictures" macros have been added from Plan 9 sources.
* The "picpack" preprocessor has been added.
* eqn: The default resolution has been changed to 7200 dpi to match that
  of troff. The "-r" option was introduced to change it.
* eqn: Handles "\[]" and "\*[]" now.
* troff, dpost: Device and font descriptions are now read directly from
  text files; the "makedev" utility is no longer needed.
* The file "NEWS" describes new troff language features.
* [nt]roff: There is no static limit on the number of "-m" options anymore.
* [nt]roff: There is no static limit on the ".hw" table anymore.
* [nt]roff: The output of long names with ".pm" and stack dumps has been
  fixed.
* [nt]roff: Nested long-name string references \*[\*...] now work.
* [nt]roff: Tabulators as in ".XY\t" are now correctly handled with -x.
* The "-man" macro no longer produces cut marks when used with troff.
* A new malloc() replacement has been added for performance reasons.
* A bug in the previously supplied realloc() replacement could result in
  heap corruption.

Release 050816
* nroff: A special terminal name, -Tlocale, has been introduced. With this
  option, UTF-8 output is generated if permitted by the current LC_CTYPE
  locale, and regular -Tlp output otherwise.